  * New draw procedure drawButtonUTF8 (issue 1577)
  * Added vertical mirror option U8G2_MIRROR_VERTICAL for u8g2 (mattnutsch@gmail.com, issue 1474).
  * Added support for UC1638 based 196x96 display (issue 371)
  * Added support for HD44102 and T7932 displays (issue 1492)
  * Added support for SSD1320 (issue 1351)
  * Added support for S1D15721 (issue 1473)
  * Added support for SSD1306 EA OLEDS102 (issue 1493)
  * Added support for UC1601 128x64 (issue 1501)
  * Font Wiki page splitted into four sub-pages to avoid the GitHub 'abuse' message.
2021-09-07	v2.30.1	olikraus@gmail.com
  * Bugfix drawButtonUTF8 (added C++ code, issue 1577)
2021-09-19	v2.31.1	olikraus@gmail.com
  * Added icons from https://app.streamlinehq.com/icons/pixel (issue 1589)
2021-09-20	v2.31.2	olikraus@gmail.com
  * Bugfix release for include error (issues 1592 and 1594)
2022-04-03      v2.32.15  olikraus@gmail.com
  * SH1107 128x80 (issue 1598)
  * ST7920 256x32 (issue 1593)
  * ST7567 122x32 (issue 1759)
  * ST7571 128X96 (issue 1575)
  * SSD1312 (issue 1806)
  * ST7571 128x128 (bugfix issue 1576)
  * Added support for UC1609 (issue 1565)
  * Added support for GU800 series of Vacuum Fluorescent Displays (VFD, issue 1604)
  * Changed SPI Mode for Sharp displays (ls013..., issue 1771)
  * Added many more fonts (issues 1794, 1775, 1706, 1769)
  * Fixed several bugs and compiler errors
2022-xx-xx      v2.33.x olikraus@gmail.com
  * ST7567 ERC13232 (issue 1869)
  * Bugfix for ST7567: (re-)added I2C and 3-wire-SPI (issue 1939)
  * ST7920 160x32 (issue 1873)
  * ST7586 JLX384160 (issue 1932)
  * LC7981 128X128, NOT TESTED (issue 1913)
  * SSD1316 96x32 (issue 1938)
  * Added support for IST3088 (issue 1887) 
  * Added support for GP1287AI (issue 1907)
  * Double size font functions: drawGlyphX2, drawStrX2, drawUTF8X2 (issue 1919)
  * Experimental support for ST75160, TESTING REQUIRED (issue 1642)
  * Bugfix font compression: Reduced fontsize by up to 4% (issue 1941)